# librepods

android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/me/kavishdevar/librepods/presentation/screens/: AppSettingsScreen.kt
android/app/src/main/java/me/kavishdevar/librepods/utils/: RadareOffsetFinder.kt
android/app/src/main/res/values/: strings.xml
android/app/src/xposed/cpp/: a2dp_aaceld_hook.cpp  a2dp_aaceld_hook.h  aaceld_encoder.cpp  aaceld_encoder.h  l2c_fcr_hook.cpp
